change ISC to GPL-3.0

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "downloader"
   ],
   "author": "Kejneafout",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/Kejneafout/mudae-harem-downloader/issues"
   },
